--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Truthfulness and falsehood -- Juvenile fiction'
 - !lcsh 'Boats and boating -- Juvenile fiction'
 - !lcsh 'Theft -- Fiction'
+- GITenberg
 title: The Boat Club; or, The Bunkers of Rippleton
 url: http://www.gutenberg.org/ebooks/24557
